--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,7 +1,48 @@
 * {
-  box-sizing: border-box;
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
-// TODO
+:root {
+  --heading: #f8f8f8;
+
+  --info: #bbbbbb;
+  --body: #d7d7d7;
+  --background: #1a1d23;
+
+  --pink: #ff57b2;
+}
+
+@media (max-width: 1080px) {
+  html {
+    font-size: 93.75%;
+  }
+}
+
+@media (max-width: 720px) {
+  html {
+    font-size: 87.5%;
+  }
+}
+body {
+  background-color: var(--background);
+  color: var(--heading);
+}
+
+body,
+input,
+textarea,
+select,
+button {
+  font: 400 1rem 'Roboto', sans-serif;
+}
+
+button {
+  cursor: pointer;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
