--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,1 +1,10 @@
-// TODO
+.container {
+  max-width: 1120px;
+  height: 4rem;
+
+  margin: 5rem auto 4rem;
+  padding: 0 2rem;
+
+  display: flex;
+  align-items: center;
+}
